tests/ui/layout/enum.stderr
error: align: AbiAlign { abi: Align(2 bytes) }
  --> $DIR/enum.rs:9:1
   |
LL | enum UninhabitedVariantAlign {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: size: Size(16 bytes)
  --> $DIR/enum.rs:15:1
   |
LL | enum UninhabitedVariantSpace {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: abi: ScalarPair(Initialized { value: Int(I8, false), valid_range: 0..=1 }, Initialized { value: Int(I8, false), valid_range: 0..=255 })
  --> $DIR/enum.rs:21:1
   |
LL | enum ScalarPairDifferingSign {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: size: Size(4 bytes)
  --> $DIR/enum.rs:31:1
   |
LL | enum DefinedLayoutAllUninhabited {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

